styles/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
    font-family: 'Roboto', sans-serif;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/**
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    contenteditable attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that are clearfixed.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */
 .cf:before,
 .cf:after {
     content: " "; /* 1 */
     display: table; /* 2 */
 }
 
 .cf:after {
     clear: both;
 }
 
 /**
  * For IE 6/7 only
  * Include this rule to trigger hasLayout and contain floats.
  */
 .cf {
     *zoom: 1;
 }

.container {
    position: relative;
    margin: 0 50px;
    /* background-color: aqua; */
}

header {
    position: fixed;
    background-color: #ffffff;
    right: 0;
    left: 0;
    height: 95px;
    z-index: 999;
    border-bottom: 1px solid rgb(231, 231, 231);
}

header h1 {
    font-size: 30px;
    font-weight: 700;
    padding: 35px 0 35px 50px;
    width: fit-content;
    float: left;
    color: #3B4856;
}

header .menu {
    margin: 20px 50px 20px 0;
    float: right;
}

header .menu ul li {
    padding: 20px 22px;
    float: left;
    box-sizing: border-box;
}

header .menu ul a {
    font-size: 17px;
    padding-bottom: 2px;
    text-decoration: none;
    color: #3B4856;
    font-weight: 500;
}

header .menu ul a:hover {
    cursor: pointer;
    border-bottom: 3px solid black;
    color: black;
}

header .menu ul a.active {
    border-bottom: 3px solid black;
    color: black;
}

main {
    position: relative;
    top: 120px;
}

/* .hero {
    height: 550px;
    background-image: url(/images/hero.jpg);
    background-repeat: no-repeat;
    background-position: -30px -10px;
    opacity: 0.8;
} */

.hero img{
    margin-top: 50px;
    width: 100%;
    opacity: 0.8;
    border-radius: 5px;
}

.quotes {
    margin: 100px auto;
}

.quotes h1 {
    color: #3B4856;
    text-align: center;
    font-size: 22px;
    font-weight: 500;
    font-style: italic;
}

.quotes h2 {
    color: #737d88;
    text-align: center;
    margin-top: 30px;
    font-size: 18px;
}

.main-content {
    border-top: 1px solid hsla(212, 19%, 68%, 0.1);
    padding: 100px 0;
    box-sizing: border-box;
}

.main-content h1 {
    font-size: 28px;
    text-align: center;
    font-weight: 700;
    color: #3B4856;
    padding-bottom: 20px;
}

.main-content h2 {
    font-size: 18px;
    text-align: center;
    font-weight: 400;
    color: #3B4856;
}

.container-items {
    display: flex;
    justify-content: space-between;
    box-sizing: border-box;
    margin-top: 40px;
}

.box-content {
    width: 31%;
    background-color: rgba(158, 172, 189, 0.1);
    border-radius: 10px;
    padding-bottom: 30px;
    opacity: 0.8;
}

.box-content img {
    border-radius: 10px 10px 0 0;
}

.box-content a {
    text-decoration: none;
}

.box-content h1:hover {
    color: #5F9BCF;
}

.box-content h1 {
    text-align: left;
    padding: 20px 20px 10px;
    line-height: 35px;
}

.box-content p {
    text-align: left;
    padding: 0 20px;
    line-height: 25px;
}

.box-content:hover {
    opacity: 1;
    /* border: 0.3px solid black; */
}

.box-content.videos {
    background-color: rgba(158, 172, 189, 0);
    height: 315px;
}

iframe {
    border-radius: 6px;
    height: 100%;
}

footer {
    position: relative;
    top: 90px;
    bottom: 0;
    left: 0;
    right: 0;
    margin-top: 100px;
}

footer .copyright {
    background-color: #3B4856;
    height: 90px;
}

footer .copyright p {
    display: block;
    padding-top: 35px;
    color: #ffffff;
    font-weight: 400;
    font-size: 16px;
    text-align: center;
}

.flex-container {
    display: flex;
    justify-content: space-between;
}

.main-side {
    /* margin: 50px 0; */
    /* background-color: rgb(209, 209, 212); */
    width: 60%;
}

.left-side {
    margin: 50px 0 50px 50px;
    /* background-color: brown; */
    width: 35%;
}

.box-blog {
    margin: 50px;
    position: relative;
    opacity: 0.8;
}

.box-blog:hover {
    opacity: 1;
}

.box-blog img {
    border-radius: 5px;
    height: auto;
    position: relative;
    width: 100%;
    /* opacity: 0.6; */
}

.box-blog .headline {
    height: 50%;
    width: 100%;
    background-color: rgba(255, 255, 255, 0.8);
    position: absolute;
    top: 50%;
    padding: 20px;
    box-sizing: border-box;
    border-radius: 0 0 5px 5px;
}

.box-blog .headline a, p {
    padding: 10px 0;
}

.box-blog .headline a, h1 {
    text-decoration: none;
    color: #5F9BCF;
}

.box-blog .headline a:hover {
    color: #528FC2;
    padding-bottom: 2px;
    border-bottom: 2px solid #528FC2;
}

.box-blog .headline p {
    line-height: 25px;
}

.box-blog .headline h1 {
    font-size: 28px;
    font-weight: 700;
}

.search {
    /* background-color: turquoise; */
    padding: 0 20px 20px;
}

.left-side label {
    font-size: 18px;
    font-weight: 700;
    display: block;
    padding-bottom: 20px;
    color: #3B4856;
}

.left-side input {
    border: none;
    height: 50px;
    width: 70%;
    font-size: 16px;
    text-indent: 10px;
    border-radius: 3px;
    background-color: rgba(158, 172, 189, 0.3);
    outline: none;
}

.left-side button {
    box-sizing: border-box;
    border: none;
    height: 52px;
    min-width: 25%;
    max-width: 30%;
    border-radius: 3px;
    font-size: 18px;
    font-weight: 700;
    color: white;
    background-color: rgba(59, 72, 86, 0.902);
}

.left-side button:hover {
    cursor: pointer;
    background-color: rgb(59, 72, 86, 1);
}

.category {
    margin-top: 50px;
    padding: 20px;
}

.category label {
    color: #3B4856;
    font-size: 18px;
    font-weight: 700;
    display: block;
    padding-bottom: 10px;
}

.category-name {
    display: flex;
    justify-content:left;
    flex-wrap: wrap;
}

.category-name a {
    margin: 10px 10px 10px 0;
    border-radius: 5px;
    font-size: 16px;
    text-decoration: none;
    color: white;
    background-color: rgb(59, 72, 86, 0.5);
    padding: 10px;
}

.category a:hover {
    text-decoration: none;
    color: white;
    background-color: rgb(59, 72, 86, 0.8);
    padding: 10px;
}

.subscribe {
    margin-top: 50px;
    padding: 20px;
    position: relative;
}

.subscribe label {
    line-height: 25px;
}

.subscribe button {
    top: 89px;
}

.sosmed {
    margin-top: 50px;
    padding: 20px;
}

.sosmed img {
    opacity: 0.7;
    margin-right: 10px;
    height: 55px;
}

.sosmed img:hover {
    opacity: 1;
}

.pagination {
    margin: 50px;
    position: relative;
    /* height: 100px; */
}

.pagination ol {
    margin: 0 auto;
    display: flex;
    justify-content: center;
}

.pagination ol li {
    margin-right: 20px;
    display: inline-block;
}

.pagination ol li a{
    border: 1px solid rgb(59, 72, 86, 0.3);
    border-radius: 50px;
    color: #3B4856;
    display: inline-block;
    padding: 15px 19px;
    text-decoration: none;
    font-size: 16px;
}

.pagination ol a:hover {
    background-color: rgb(59, 72, 86, 0.8);
    color: white;
}

.pagination a.selected {
    background-color: rgb(59, 72, 86, 0.8);
    color: white;
}

.description {
    position: relative;
    height: 550px;
    /* background-color: wheat; */
}

.description h1 {
    font-size: 40px;
    text-transform: uppercase;
    font-weight: 700;
    letter-spacing: 5px;
    color: #3B4856;
    margin-bottom: 20px;
}

.description p {
    color: #3B4856;
    font-size: 18px;
    line-height: 30px;
}

.description img {
    margin-top: 80px;
    float: right;
    filter: grayscale();
    opacity: 0.7;
    margin-left: 40px;
    border-radius: 5px;
}

.description ul {
    margin-left: 50px;
    list-style-image: url(../images/checklist.png);
}

.description ul li {
    color: #3B4856;
    padding: 10px 0;
}

span.bold {
    font-weight: 700;
}

.card {
    top: 30px;
    position: relative;
    height: 550px;
    background-color: rgba(245, 245, 245, 0.5);
    border-radius: 10px;
    display: flex;
    justify-content: space-evenly;
}

.profile {
    top: 50px;
    margin-left: 50px;
    margin-right: 50px;
    position: relative;
    width: 30%;
    /* background-color: violet; */
}

.profile img {
    border-radius: 50%;
    opacity: 0.9;
}

.profile h1 {
    font-size: 28px;
    text-align: center;
    margin-top: 20px;
    font-weight: 700;
    color: #3B4856;
}

.profile h2 {
    font-size: 18px;
    text-align: center;
    margin-top: 15px;
    color: #3B4856;
}

.mysocmed {
    padding: 20px;
    display: flex;
    justify-content: space-evenly;
}

.mysocmed img {
    opacity: 0.7;
    width: 55px;
}

.mysocmed img:hover {
    opacity: 1;
}

.profile-desc {
    position: relative;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.055);
    border-radius: 0 10px 10px 0;
    padding: 50px;
    box-sizing: border-box;
}

.profile-desc h1 {
    font-size: 30px;
    font-weight: 700;
    margin-bottom: 15px;
    color: #3B4856;
}

.profile-desc p {
    font-size: 18px;
    line-height: 25px;
    color: #3B4856;
}

.description.contact {
    margin-bottom: 100px;
}

.description.contact h1 {
    margin-top: 50px;
    font-size: 40px;
    text-align: center;
    color: #3B4856;
}

.description.contact h2 {
    margin-top: 10px;
    font-size: 20px;
    text-align: center;
    margin-bottom: 20px;
    color: #3B4856;
}

.description.contact img {
    float: left;
    width: 50%;
    margin: 50px 50px 0 0;
}

.field label {
    color: #3B4856;
    display: block;
    margin: 20px;
    margin-bottom: 10px;
}

.field input, textarea {
    border: none;
    height: 50px;
    width: 46%;
    font-size: 16px;
    text-indent: 10px;
    border-radius: 3px;
    background-color: rgba(158, 172, 189, 0.3);
    border-radius: 3px;
    outline: none;
    margin-bottom: 15px;
}

.field textarea {
    height: 120px;
    resize: none;
    padding-top: 10px;
    font-family: 'Roboto', sans-serif;
}

.contact-form button {
    box-sizing: border-box;
    margin-top: 20px;
    padding: 15px 80px;
    border: none;
    font-size: 16px;
    color: white;
    background-color: rgba(59, 72, 86, 0.902);
    border-radius: 3px;
    font-weight: 700;
}

.contact-form button:hover {
    cursor: pointer;
    background-color: rgb(59, 72, 86, 1);
}

.box-blog.detail {
    opacity: 1;
}

.box-blog.detail img.images-blog {
    border-radius: 3px;
}

.box-blog.detail h1 {
    color: #3B4856;
    font-size: 40px;
    font-weight: 700;
    margin-bottom: 10px;
}

.box-blog.detail p {
    font-size: 16px;
    margin-bottom: 30px;
    color: #3B4856;
}

.box-blog.detail a {
    text-decoration: none;
    color: #8BC5FB;
}

.box-blog.detail a:hover {
    padding-bottom: 2px;
    border-bottom: 2px solid #8BC5FB;
}

.box-blog.detail .text p {
    font-size: 18px;
    line-height: 25px;
    margin-bottom: 10px;
}

